# DD2358-HPC-assignment-2

./: .gitignore  CMakeLists.txt  Part1-Makefile  README.md  matrix.c  matrix.h
Part2/: gemm_test.f90  matrix.f90  matrix.mod
include/: matrix.h
src/: gemm_test.f90  matrix.c  matrix.cpp  matrix.f90  run_matrix.py
